--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
             <div class="resume-item pb-0">
               <h4>Abhinav Verma</h4>
-              <p><em>Graduate Engineer Trainee with expertise in software development, backend engineering, and data
+              <p><em>Graduate Engineer  with expertise in software development, backend engineering, and data
                   analysis. Proficient in Python, Java, Django Rest Framework (DRF), and database management. Passionate
                   about building scalable applications and driving process improvements in software engineering.</em>
               </p>
@@ -293,7 +293,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Graduate Engineer Trainee – MobileComm (a UST)</h4>
+              <h4>Software Engineer – MobileComm (a UST)</h4>
               <h5>Nov 2024 – Present | Gurgaon</h5>
               <ul>
                 <li>Worked on live projects, focusing on backend development and API integration.</li>
